# multi-layer-perceptron

./: README.md  pyproject.toml
multi_layer_perceptron/: __main__.py  circles.py  fashion_mnist.py  helper_functions.py  iris.py  load_fashion.py  load_mnist.py  mnist.py  model.py
my_neural_network/: helper_functions.py
